; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_error.c_libvlc_vprinterr.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_error.c_libvlc_vprinterr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oom = common dso_local global i64 0, align 8
@context = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @libvlc_vprinterr(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @vasprintf(i8** %5, i8* %10, i32 %11)
  %13 = icmp eq i32 %12, -1
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i64, i64* @oom, align 8
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** %5, align 8
  br label %17

17:                                               ; preds = %14, %2
  %18 = call i32 (...) @free_error()
  %19 = load i32, i32* @context, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @vlc_threadvar_set(i32 %19, i8* %20)
  %22 = load i8*, i8** %5, align 8
  ret i8* %22
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vasprintf(i8**, i8*, i32) #1

declare dso_local i32 @free_error(...) #1

declare dso_local i32 @vlc_threadvar_set(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
